--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,16 +28,11 @@
     <footer class="site-footer">
       <div class="footer-wrapper">
         <div class="linkcat">
-          <h2>Links of Interest</h2>
-          <ul class="blogroll">
-            <li><a href="http://folkartcooperstown.blogspot.com">American Folk Art @ Cooperstown</a></li>
-
-          </ul>
         </div>
         <div class="copyright">
           <h2>Author</h2>
           <p>© 2017 Kate Scott
-            <br><a href="http://www.katescott.net">Website and CV</a></p>
+            <br><a href="https://www.katescott.net">Website and CV</a></p>
         </div>
       </div>
     </footer>
